# cookiecutter-pysci-project

./: CHANGELOG.md  CITATION.cff  LICENSE  README.md  cookiecutter.json  zensical.toml
.github/workflows/: dependabot-reviewer.yml  docs.yml  main.yml
docs/: index.md  prompts.md  tips.md  tutorial.md
docs/features/: code-quality.md  development.md  documentation.md  github-actions.md  justfile.md  publish-package.md  research-projects.md  snakemake.md  uv.md
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
{{ cookiecutter.project_name }}/: LICENSE  README.md  justfile  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: main.yml
{{ cookiecutter.project_name }}/docs/: example.md  references.bib
{{ cookiecutter.project_name }}/docs/_config/: autodoc2.py  intersphinx.py  myst.py
{{ cookiecutter.project_name }}/docs/_config/themes/: furo.py
{{ cookiecutter.project_name }}/docs/_static/: custom.css
{{ cookiecutter.project_name }}/tests/: test_submodule.py
{{ cookiecutter.project_slug }}/: .env  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  jupytext.toml  justfile  pyproject.toml  requirements.txt  ruff.toml  setup.py  zensical.toml
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
{{ cookiecutter.project_slug }}/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
{{ cookiecutter.project_slug }}/.github/workflows/: dependabot-reviewer.yml  main.yml
{{ cookiecutter.project_slug }}/assets/mpl_styles/: dark_presentation.mplstyle  white_paper.mplstyle
{{ cookiecutter.project_slug }}/docs/: _config.yml  _sphinx_config.py  _toc.yml  bibliography.md  conf.py  demo-stuff.md  docs_requirements.txt  example.md  index.md  references.bib  requirements.txt
{{ cookiecutter.project_slug }}/docs/_config/: autoapi.py  bibtex.py  images.py  napoleon.py  typehints.py
{{ cookiecutter.project_slug }}/docs/_config/themes/: furo.py  sphinx_immaterial.py
{{ cookiecutter.project_slug }}/docs/_static/: custom.css
{{ cookiecutter.project_slug }}/docsrc/: Makefile  requirements.txt
{{ cookiecutter.project_slug }}/docsrc/source/: _license.md  conf.py  genindex.rst  index.rst  py-modindex.rst
{{ cookiecutter.project_slug }}/docsrc/source/_static/: custom.css
{{ cookiecutter.project_slug }}/notebooks/: 01-minimal-example.ipynb  jupyter_startup.ipy
{{ cookiecutter.project_slug }}/reports/: README.md
{{ cookiecutter.project_slug }}/reports/book/: README.md  _config.yml  index.md
{{ cookiecutter.project_slug }}/scripts/: 01-test.py  main.py
{{ cookiecutter.project_slug }}/src/: __init__.py  submodule.py
{{ cookiecutter.project_slug }}/src/core/: __init__.py  utils.py
{{ cookiecutter.project_slug }}/src/tests/: conftest.py  test_submodule.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py  cli.py  submodule.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: cli.py
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_submodule.py
{{ cookiecutter.repo_name }}/: README.md
