[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [
  {name = "{{ cookiecutter.project_author }}", email = "{{ cookiecutter.email }}"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.10"
dependencies = [
  "click",
  "colorama",
  "dask",
  "Deprecated",
  "docopt",
  "ipykernel",
  "ipython",
  "ipywidgets",
  "jupytext",
  "jupyterbook-latex",
  "jupyterlab",
  "jupyternotify",
  "jupytext",
  "markdown",
  "matplotlib",
  "mystmd",
  "nodejs",
  "numpy",
  "pandas",
  "python-dotenv",
  "rich",
  "tqdm",
  "typer",
  "xarray"
]


[project.scripts]
generate-list = "{{ cookiecutter.project_slug }}.submodule:generate_int_list"
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:app"


[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
  "flake8",
  "ruff"
]
test = [
  "pytest",
  "pytest-cov"
]
docs = [
  "furo",
  "jupyter-book",
  "jupyterbook-latex",
  "linkify-it-py",
  "lxml_html_clean",
  "myst-parser",
  "nbsphinx",
  "pydata-sphinx-theme",
  "rinohtype",
  "sphinx",
  "sphinx-autoapi",
  "sphinx-autobuild",
  "sphinx-autodoc-defaultargs",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme",
  "sphinx-comments",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-immaterial",
  "sphinx-issues",
  "sphinx-rtd-theme",
  "sphinx-tabs",
  "sphinx-toolbox",
  "sphinxcontrib-apidoc",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-htmlhelp",
  "sphinxcontrib-images",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-napoleon",
]


[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"



[tool.jupytext]
formats = "ipynb,py:percent,md:myst"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "src",
]
addopts = [
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "-ra -v",
    "--cov=./src",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing"
]


[tool.cruft]
skip = [".git/"]
