[build-system]
requires = ["setuptools @ git+https://github.com/pypa/setuptools.git@main", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
description = "{{ cookiecutter.project_description }}"
authors = [
  {name = "{{ cookiecutter.project_author }}", email = "{{ cookiecutter.email }}"},
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = []


[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_name }}.cli:main"


[tool.setuptools.dynamic]
version = {attr = "src.__version__"}


[tool.setuptools.packages.find]
where = ["."]
include = ["src"]


[tool.jupytext]
formats = "ipynb,py:percent,md:myst"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/tests",
    "src",
]
addopts = [
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "-ra -v",
    "--cov=./src",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing"
]


[tool.cruft]
skip = [".git/"]
