[build-system]
requires = ["setuptools @ git+https://github.com/pypa/setuptools.git@main", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
description = "{{ cookiecutter.project_description }}"
authors = [
  {name = "{{ cookiecutter.project_author }}", email = "{{ cookiecutter.email }}"},
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
  "click",
  "colorama",
  "dask",
  "Deprecated",
  "docopt",
  "ipykernel",
  "ipython",
  "ipywidgets",
  "jupyter-book",
  "jupyterbook-latex",
  "jupyterlab",
  "jupyternotify",
  "jupytext",
  "markdown",
  "matplotlib",
  "mystmd",
  "nodejs",
  "numpy",
  "pandas",
  "python-dotenv",
  "rich",
  "tqdm",
  "typer",
  "xarray"
]


[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
  "flake8",
  "ruff"
]
test = [
  "pytest",
  "pytest-cov"
]
docs = [
  "furo",
  "jupyter-book",
  "jupytext",
  "lxml_html_clean",
  "myst-parser",
  "nbsphinx",
  "pydata-sphinx-theme",
  "rinohtype",
  "Sphinx",
  "sphinx-autoapi",
  "sphinx-autodoc-defaultargs",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme",
  "sphinx-comments",
  "sphinx-immaterial",
  "sphinx-issues",
  "sphinx-material",
  "sphinx-rtd-theme",
  "sphinx-tabs",
  "sphinx-toolbox",
  "sphinxcontrib-apidoc",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-htmlhelp",
  "sphinxcontrib-images",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-napoleon",
  "sphinxcontrib-napoleon2"
]




[tool.jupytext]
formats = "ipynb,py:percent,md:myst"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/tests",
    "src",
]
addopts = [
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "-ra -v",
    "--cov=./src",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing"
]


[tool.cruft]
skip = [".git/"]
